# EigenSolverMOOSE

./: README.md  TwoLines.msh  cartesian_division.e  run_tests  square.msh  static1D.i  static1D_TwoMaterials.i  static1D_in.e  static1D_out.e  static1D_periodic.i  static1D_periodic_eigen.i  static1D_periodic_out.e  static1D_twomat_eigen.i  static1d-dbg  static1d.yaml  testroot
Bloch2D/: CMakeLists.txt  Material.h  Quad.h  Quad_Bilinear.h  a.out  dispersion_data  main.cpp  plot  plot.cpp  square_mesh_coarse.vtk
Bloch2D/include/: Circle.h  Levelset.h  Material.h  Quad.h  Quad2.h  Quad3.h  Quad4.h  Quad5.h  Quad_hni.h  gauss_points.h
Bloch2D/src/: Material.cpp  Quad.cpp  Quad2.cpp  Quad3.cpp  Quad4.cpp  Quad5.cpp  main.cpp  plot.cpp
Bloch2D/xfem/: Circle.cpp  Levelset.cpp  Quad_hni.cpp  gauss_points.cpp  main.cpp
Eigen_1D/: Makefile  static1D_periodic_eigen.i  static1d-opt
Eigen_1D/doc/: config.yml
Eigen_1D/include/: BlochDirichletBC.h  BlochNeumannBC.h
Eigen_1D/lib/: libstatic1d-opt.so.0
Eigen_1D/src/: BlochDirichletBC.x86_64-conda-linux-gnu.dbg.lo.d  BlochDirichletBC.x86_64-conda-linux-gnu.debug.lo.d  BlochDirichletBCImag.C  BlochDirichletBCImag.x86_64-conda-linux-gnu.debug.lo  BlochDirichletBCImag.x86_64-conda-linux-gnu.debug.lo.d  BlochDirichletBCImag.x86_64-conda-linux-gnu.opt.lo  BlochDirichletBCImag.x86_64-conda-linux-gnu.opt.lo.d  BlochDirichletBCReal.x86_64-conda-linux-gnu.debug.lo  BlochDirichletBCReal.x86_64-conda-linux-gnu.debug.lo.d  BlochDirichletBCReal.x86_64-conda-linux-gnu.opt.lo  BlochDirichletBCReal.x86_64-conda-linux-gnu.opt.lo.d  BlochNeumannBC.C  BlochNeumannBC.x86_64-conda-linux-gnu.dbg.lo.d  BlochNeumannBC.x86_64-conda-linux-gnu.debug.lo.d  BlochNeumannBC.x86_64-conda-linux-gnu.opt.lo  main.x86_64-conda-linux-gnu.dbg.lo  main.x86_64-conda-linux-gnu.debug.lo
doc/content/: index.md
eigen1d/: .gitignore  Makefile  README.md  README.txt  eigen1D_periodic_eigen.i  eigen1D_periodic_trial2.i  run_tests  testroot
eigen1d/doc/: config.yml  sqa_reports.yml
eigen1d/include/: BlochDirichletBCImag.h  BlochDirichletBCReal.h
eigen1d/src/: BlochDirichletBCImag.C  BlochDirichletBCReal.C  main.C
eigen1d/unit/: Makefile  run_tests
eigen_xfem/: .gitignore  Makefile  README.md  eigen2D_xfem.i  eigen2d_xfem_trial2.i  eigen2d_xfem_trial3.i  run_tests  square.msh  testroot
eigen_xfem/doc/: config.yml
eigen_xfem/src/: main.C
include/: BlochDirichletBC.h  BlochNeumannBC.h
lib/: libstatic1d-dbg.la
moose/: README.txt
src/: BlochDirichletBC.C  BlochNeumannBC.C  BlochNeumannBC.x86_64-conda-linux-gnu.dbg.lo  BlochNeumannBC.x86_64-conda-linux-gnu.debug.lo  BlochNeumannBC.x86_64-conda-linux-gnu.opt.lo.d  LinearGradientConstraint.x86_64-conda-linux-gnu.dbg.lo.d  main.C  main.x86_64-conda-linux-gnu.dbg.lo.d  main.x86_64-conda-linux-gnu.debug.lo.d  main.x86_64-conda-linux-gnu.opt.lo  main.x86_64-conda-linux-gnu.opt.lo.d
unit/: Makefile  run_tests
(+41 files in other folders)
